--- a/app/src/main/res/layout/device_item.xml
+++ b/app/src/main/res/layout/device_item.xml
@@ -10,28 +10,30 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="4"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/device_icon"
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
-                tools:src="@drawable/ic_temperature"
-                android:layout_centerInParent="true"/>
+                android:layout_gravity="center"
+                android:layout_marginBottom="10dp"
+                tools:src="@drawable/ic_temperature"/>
 
             <TextView
                 android:id="@+id/device_name"
-                android:layout_below="@+id/device_icon"
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 tools:text="Lamp"
-                android:layout_marginTop="30dp"
                 android:textSize="@dimen/division_item_text_size"/>
 
             <TextView
@@ -42,10 +44,9 @@
                 tools:visibility="visible"
                 android:visibility="gone"
                 android:gravity="center"
-                android:textSize="@dimen/device_text_size"
-                android:layout_below="@+id/device_name"/>
+                android:textSize="@dimen/device_text_size"/>
 
-        </RelativeLayout>
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
