added radio buttons to enumerated properties

--- a/app/src/main/res/layout/property_enum.xml
+++ b/app/src/main/res/layout/property_enum.xml
@@ -12,10 +12,11 @@
         android:layout_height="wrap_content"
         tools:text="TextView"/>
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/enum_selection_view"
+        android:choiceMode="singleChoice"
         android:layout_marginTop="10dp"/>
 
 </LinearLayout>
