--- a/app/src/main/res/layout/device_item.xml
+++ b/app/src/main/res/layout/device_item.xml
@@ -50,7 +50,7 @@
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:id="@+id/property_list"
             android:layout_weight="2"/>
 
