--- a/app/src/main/res/layout/enumerated_item.xml
+++ b/app/src/main/res/layout/enumerated_item.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="@dimen/activity_horizontal_margin">
+    android:layout_height="wrap_content">
 
-    <TextView
+    <RadioButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/enumerated_text_view"
+        android:id="@+id/enumerated_rounded_checkbox"
         tools:text="ON"/>
 
 </LinearLayout>
